tests/ui/static/issue-24446.stderr
error[E0277]: `(dyn Fn() -> u32 + 'static)` cannot be shared between threads safely
  --> $DIR/issue-24446.rs:2:5
   |
LL |     static foo: dyn Fn() -> u32 = || -> u32 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Fn() -> u32 + 'static)` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `(dyn Fn() -> u32 + 'static)`
   = note: shared static variables must have a type that implements `Sync`

error[E0277]: the size for values of type `(dyn Fn() -> u32 + 'static)` cannot be known at compilation time
  --> $DIR/issue-24446.rs:2:5
   |
LL |     static foo: dyn Fn() -> u32 = || -> u32 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Fn() -> u32 + 'static)`
   = note: statics and constants must have a statically known size

error[E0308]: mismatched types
  --> $DIR/issue-24446.rs:2:35
   |
LL |       static foo: dyn Fn() -> u32 = || -> u32 {
   |  ___________________________________^
...  |
LL | |     };
   | |_____^ expected `dyn Fn`, found closure
   |
   = note: expected trait object `(dyn Fn() -> u32 + 'static)`
                   found closure `{closure@$DIR/issue-24446.rs:2:35: 2:44}`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
